think i finally have the layout I am going to go with

--- a/resume.html
+++ b/resume.html
@@ -13,17 +13,10 @@
   <main class="container" itemscope itemtype="https://schema.org/Person">
     <header role="banner">
       <div class="name" itemprop="name">Alex Freidah</div>
-      <div class="role">Senior Software Engineer — DevOps | Tooling | Cloud/Platform | CI/CD</div>
-      <div class="contact">
-        <a href="tel:+17033623220" itemprop="telephone">+1 703-362-3220</a>
-        <span class="dot">•</span>
-        <a href="mailto:alex.freidah@gmail.com" itemprop="email">alex.freidah@gmail.com</a>
-        <span class="dot">•</span>
-        <a href="https://github.com/afreidah" target="_blank" rel="noopener noreferrer" itemprop="sameAs">github.com/afreidah</a>
-        <span class="dot">•</span>
-        <a href="https://www.linkedin.com/in/alex-freidah/" target="_blank" rel="noopener noreferrer" itemprop="sameAs">linkedin.com/in/alex-freidah</a>
-        <span class="dot">•</span>
-        <span class="screen-only" aria-hidden="true">Los Angeles, CA</span>
+
+      <!-- Role + Theme toggle on the same line -->
+      <div class="topline">
+        <div class="role">Senior Software Engineer — DevOps | Tooling | Cloud/Platform | CI/CD</div>
         <span class="actions">
           <button
             class="btn"
@@ -34,6 +27,18 @@
             data-label-light="Light Theme"
           >Light Theme</button>
         </span>
+      </div>
+
+      <div class="contact">
+        <a href="tel:+17033623220" itemprop="telephone">+1 703-362-3220</a>
+        <span class="dot">•</span>
+        <a href="mailto:alex.freidah@gmail.com" itemprop="email">alex.freidah@gmail.com</a>
+        <span class="dot">•</span>
+        <a href="https://github.com/afreidah" target="_blank" rel="noopener noreferrer" itemprop="sameAs">github.com/afreidah</a>
+        <span class="dot">•</span>
+        <a href="https://www.linkedin.com/in/alex-freidah/" target="_blank" rel="noopener noreferrer" itemprop="sameAs">linkedin.com/in/alex-freidah</a>
+        <span class="dot">•</span>
+        <span class="screen-only" aria-hidden="true">Los Angeles, CA</span>
       </div>
       <meta itemprop="addressLocality" content="Los Angeles, CA" />
       <meta itemprop="url" content="https://resume.alexfreidah.com" />
@@ -239,4 +244,3 @@
   <script defer src="theme.js"></script>
 </body>
 </html>
-
