Updated a lot of wording.  I think this one goes live

--- a/resume.html
+++ b/resume.html
@@ -202,7 +202,7 @@
       <article class="item">
         <div>
           <h3><span class="link-icon" aria-hidden="true"></span>Go Protobuf Library Contribution</h3>
-          <p>Fixed a typo in Google’s protobuf-go library discovered via a custom pipeline; PR merged in v1.25.</p>
+          <p>Fixed typo in Go protobuf library discovered through custom CI/CD pipeline I designed for backend service I developed. Registered as a Go contributor, pushed PR with fix to Gerrit as per the contribution rules, merged in version 1.25.</p>
         </div>
         <a class="cover-link" href="https://go-review.googlesource.com/c/protobuf/+/697595" target="_blank" rel="noopener noreferrer" aria-label="Open: Go protobuf contribution change"></a>
       </article>
@@ -214,7 +214,7 @@
       <!-- No boxes here -->
       <div>
         <h3>Experienced Instructor</h3>
-        <p>Fifteen years of teaching music including at the community college level, enabling effective training and development of junior engineers.</p>
+        <p>Fifteen years of teaching experience, including as a faculty member at Northern Virginia Community College. This background in education informs a proven ability to mentor and develop junior engineers, with a genuine enthusiasm for guiding others toward professional growth.</p>
       </div>
       <div>
         <h3>Independent and Ownership-Oriented</h3>
