fixed typo copy/paste error

--- a/resume.html
+++ b/resume.html
@@ -149,7 +149,7 @@
           <div class="meta">Jul 2009 – Nov 2012 · Falls Church, VA</div>
         </summary>
         <ul>
-          <li>Upheld security for 5 years with United States Secret-level clearance.</li>
+          <li>Upheld United States Secret-level security clearance for 5 years.</li>
           <li>Promoted from analyst to sole developer/maintainer of TAD, a duplicate-detection and merge system for the TRICARE Clinical Data Repository (Oracle on HP-UX).</li>
           <li>Initiated automation of analyst workflows with VBA/browser integration, cutting manual effort to near zero and multiplying throughput.</li>
           <li>Built PL/SQL + rules-based matching pipelines that scaled merges from ~100k to millions annually, proactively cleaning patient records.</li>
