--- a/index.html
+++ b/index.html
@@ -141,23 +141,6 @@
           <li>Mentored an intern in a 2-week program, sharing data-warehouse operations knowledge and technical skills.</li>
         </ul>
       </details>
-
-      <!-- TMCI -->
-      <details class="item job" aria-labelledby="tmci-title">
-        <summary>
-          <h3 id="tmci-title">TMCI International — Analyst / Developer</h3>
-          <div class="meta">Jul 2009 – Nov 2012 · Falls Church, VA</div>
-        </summary>
-        <ul>
-          <li>Upheld United States Secret-level security clearance for 5 years.</li>
-          <li>Promoted from analyst to sole developer/maintainer of TAD, a duplicate-detection and merge system for the TRICARE Clinical Data Repository (Oracle on HP-UX).</li>
-          <li>Initiated automation of analyst workflows with VBA/browser integration, cutting manual effort to near zero and multiplying throughput.</li>
-          <li>Built PL/SQL + rules-based matching pipelines that scaled merges from ~100k to millions annually, proactively cleaning patient records.</li>
-          <li>Applied custom phonetic matching algorithms (Soundex, Phonex) in C# DLLs integrated with a VB5 engine, improving duplicate detection by ~5%.</li>
-          <li>Built a multithreaded C/pthreads engine to parallelize massive SQL updates, adapting modern C to HP-UX compiler quirks and reducing processing time by ~50%.</li>
-          <li>Exhibited rapid self-learning (C, C#, PL/SQL, VBA) and integrated them into production systems.</li>
-        </ul>
-      </details>
     </section>
 
     <!-- ======================= Key Achievements ====================== -->
@@ -175,6 +158,24 @@
     <section id="projects" aria-labelledby="proj-h">
       <h2 id="proj-h">Projects &amp; Open Source</h2>
 
+      # health check service
+      <article class="item">
+        <div>
+          <h3><span class="link-icon" aria-hidden="true"></span>Health Check Service (Go / Docker / Nomad / Kubernetes)</h3>
+          <p>Go service that monitors systemd units over D-Bus and exposes their status via HTTP (<code>/health</code>, <code>/api/status</code>) with Prometheus <code>/metrics</code> and an embedded real-time dashboard. Ships with a minimal Docker image and K8s/Nomad manifests; supports TLS, configurable check intervals, stale-data detection, and automatic D-Bus reconnection.</p>
+
+          <hr>
+
+          <p class="live" style="position:relative; z-index:2; margin-top:0.5rem;">
+            <a href="https://k3s-status.alexfreidah.com/" target="_blank" rel="noopener noreferrer"
+               onclick="event.stopPropagation()" style="position:relative; z-index:2; display:inline-block;">Live dashboard</a>
+            <span class="muted"> · k3s on my homelab Munchbox cluster.  The healch-checker is running as a Hashicorp Nomad job</span>
+          </p>
+        </div>
+        <a class="cover-link" href="https://github.com/afreidah/health-check-service" target="_blank" rel="noopener noreferrer" aria-label="Open: Health Check Service"></a>
+      </article>
+
+      # VPC peering tool
       <article class="item">
         <div>
           <h3><span class="link-icon" aria-hidden="true"></span>AWS VPC Peering Tool (Go / CDKTF / Docker / GitHub Actions)</h3>
@@ -183,6 +184,16 @@
         <a class="cover-link" href="https://github.com/afreidah/vpc-peering-tool" target="_blank" rel="noopener noreferrer" aria-label="Open: VPC Peering Tool"></a>
       </article>
 
+      # Terraform infrastructure project
+      <article class="item">
+        <div>
+          <h3><span class="link-icon" aria-hidden="true"></span>Terraform AWS Infrastructure (Terraform / AWS / CI/CD)</h3>
+          <p>Reference AWS architecture and theoretical Terraform layout for multi-environment deployments (networking, compute, and data tiers). Paired with a GitHub Actions CI/CD pipeline that runs format/validate/plan/test and security scans, plus a custom Dockerfile to standardize the tooling for reliable local and CI runs.</p>
+        </div>
+        <a class="cover-link" href="https://github.com/afreidah/terraform_design_project" target="_blank" rel="noopener noreferrer" aria-label="Open: Terraform AWS Infrastructure"></a>
+      </article>
+
+      # Munchbox Nomad Consul Cluster
       <article class="item">
         <div>
           <h3><span class="link-icon" aria-hidden="true"></span>Munchbox (Chef / Ruby / Go / CDKTF / Docker / GitHub Actions)</h3>
@@ -191,6 +202,7 @@
         <a class="cover-link" href="https://github.com/afreidah/munchbox" target="_blank" rel="noopener noreferrer" aria-label="Open: Munchbox"></a>
       </article>
 
+      # Gredentures
       <article class="item">
         <div>
           <h3><span class="link-icon" aria-hidden="true"></span>Gredentures (Go / AWS / IAM)</h3>
@@ -199,6 +211,7 @@
         <a class="cover-link" href="https://github.com/afreidah/gredentures" target="_blank" rel="noopener noreferrer" aria-label="Open: Gredentures"></a>
       </article>
 
+      # Go protobuf contribution
       <article class="item">
         <div>
           <h3><span class="link-icon" aria-hidden="true"></span>Go Protobuf Library Contribution</h3>
@@ -244,3 +257,4 @@
   <script defer src="theme.js"></script>
 </body>
 </html>
+
