--- a/index.html
+++ b/index.html
@@ -126,21 +126,6 @@
           <li>Managed and maintained large-scale database fleets, monitoring, metrics, alerting, and logging across AWS, Joyent SDC, and GCP.</li>
         </ul>
       </details>
-
-      <!-- AOL -->
-      <details class="item job" aria-labelledby="aol-title">
-        <summary>
-          <h3 id="aol-title">AOL — Data Warehouse Operations (DevOps)</h3>
-          <div class="meta">Nov 2012 – Mar 2014 · Dulles, VA</div>
-        </summary>
-        <ul>
-          <li>Enhanced data-processing visibility by 50% for AOL platforms including Huffington Post and TechCrunch by scripting Zenoss to monitor 3M+ daily ETL records.</li>
-          <li>Improved analytics workload efficiency by 25% by overseeing ETL process monitoring on Ab Initio, Hadoop, Vertica, and Oracle systems handling millions of records daily.</li>
-          <li>Presented Ruby testing techniques at 6 local meetups, enhancing community engagement and testing practices.</li>
-          <li>Delivered 12 TDD and acceptance-testing presentations (Ruby/Cucumber), training 30+ team members at AOL’s Data Warehouse.</li>
-          <li>Mentored an intern in a 2-week program, sharing data-warehouse operations knowledge and technical skills.</li>
-        </ul>
-      </details>
     </section>
 
     <!-- ======================= Key Achievements ====================== -->
@@ -156,7 +141,7 @@
 
     <!-- ==================== Projects & Open Source ================== -->
     <section id="projects" aria-labelledby="proj-h">
-      <h2 id="proj-h">Projects &amp; Open Source</h2>
+      <h2 id="proj-h">Solo Projects &amp; Open Source</h2>
 
       # health check service
       <article class="item">
@@ -169,7 +154,7 @@
           <p class="live" style="position:relative; z-index:2; margin-top:0.5rem;">
             <a href="https://k3s-status.alexfreidah.com/" target="_blank" rel="noopener noreferrer"
                onclick="event.stopPropagation()" style="position:relative; z-index:2; display:inline-block;">Live dashboard</a>
-            <span class="muted"> · k3s on my homelab Munchbox cluster.  The healch-checker is running as a Hashicorp Nomad job</span>
+            <span class="muted"> · k3s on my homelab Munchbox cluster.  The healch-checker is running as a <a href="https://github.com/afreidah/munchbox/blob/main/cdktf/infra/nomad-jobs/infrastructure/health-checker.nomad.hcl" target="_blank" rel="noopener noreferrer" onclick="event.stopPropagation()">Hashicorp Nomad job</a></span>
           </p>
         </div>
         <a class="cover-link" href="https://github.com/afreidah/health-check-service" target="_blank" rel="noopener noreferrer" aria-label="Open: Health Check Service"></a>
@@ -257,4 +242,3 @@
   <script defer src="theme.js"></script>
 </body>
 </html>
-
