accidentally removed tmci

--- a/index.html
+++ b/index.html
@@ -141,6 +141,23 @@
           <li>Mentored an intern in a 2-week program, sharing data-warehouse operations knowledge and technical skills.</li>
         </ul>
       </details>
+
+      <!-- TMCI -->
+      <details class="item job" aria-labelledby="tmci-title">
+        <summary>
+          <h3 id="tmci-title">TMCI International — Analyst / Developer</h3>
+          <div class="meta">Jul 2009 – Nov 2012 · Falls Church, VA</div>
+        </summary>
+        <ul>
+          <li>Upheld United States Secret-level security clearance for 5 years.</li>
+          <li>Promoted from analyst to sole developer/maintainer of TAD, a duplicate-detection and merge system for the TRICARE Clinical Data Repository (Oracle on HP-UX).</li>
+          <li>Initiated automation of analyst workflows with VBA/browser integration, cutting manual effort to near zero and multiplying throughput.</li>
+          <li>Built PL/SQL + rules-based matching pipelines that scaled merges from ~100k to millions annually, proactively cleaning patient records.</li>
+          <li>Applied custom phonetic matching algorithms (Soundex, Phonex) in C# DLLs integrated with a VB5 engine, improving duplicate detection by ~5%.</li>
+          <li>Built a multithreaded C/pthreads engine to parallelize massive SQL updates, adapting modern C to HP-UX compiler quirks and reducing processing time by ~50%.</li>
+          <li>Exhibited rapid self-learning (C, C#, PL/SQL, VBA) and integrated them into production systems.</li>
+        </ul>
+      </details>
     </section>
 
     <!-- ======================= Key Achievements ====================== -->
@@ -257,3 +274,4 @@
   <script defer src="theme.js"></script>
 </body>
 </html>
+
