--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Alex Freidah — Senior Software Engineer (DevOps / Tooling / Cloud / CI/CD)</title>
   <meta name="description" content="Senior Infrastructure Engineer with 10+ years delivering scalable cloud infrastructure and automation. Terraform, CI/CD, DevOps, multi-region architectures, SOC 2." />
   <link rel="stylesheet" href="styles.css" />
+  <script defer src="https://analytics.alexfreidah.com/script.js" data-website-id="ffc8f029-e06c-4b39-9cb1-7a74a7e8e7bc"></script>
 </head>
 
 <body>
